public/css/styles.css
/******* Mobile Styles < 768px ******************/
body {
   display: flex;
   flex-direction: column;
   width: 60%;
   margin-left: auto;
   margin-right: auto;
}
header#top-header {
   display: flex;
   justify-content: space-between;
   align-items: center;

}
#top-header span,
#tools {
   display: inline-block;
   margin-right: 10px;
   margin-top: 3%;
}
#top-header span {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bolder;
   font-size: x-large;
}
#tools{
   margin-right: 0;
   margin-bottom: auto;
}
a.no-under {
   margin-right: 5px;
   padding-top: 15px;
   text-decoration: none;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
   
}
nav ul{
   background-color: black;
   list-style-type: none;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0;
   height: 40px;
}
nav li {
   padding: 0 3%;
   color: white;
}
#car-div {
   max-width: fit-content;
   margin: auto;
   padding-left: 30px;
}
#car-div span{
   margin-top: 0;
   margin-bottom: 0;
   font-weight: bolder;
   font-size: larger;
}
#overlap {
   position: absolute;
   width: 25%;
   background-color: rgba(255, 255, 255, 0.75);
   transform: translate(-55%, -125%);
   color: rgb(161, 26, 26);
}
#overlap p {
   margin: 0;
}
.p-color {
   text-align: center;
   width: 85%;
   height: 10%;
   background-color: rgb(161, 26, 26);
   color: rgb(176, 176, 176);
   text-align: center;
   font-weight: bolder;
}
#reviews {
   margin-bottom: 0;
}
#review-list{
   margin-left: 20px;
   margin-top: 0;
   padding: 0;
   font-size: smaller;
}
#review-list li{
   padding-bottom: 2%;
}
#upgrades{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
}
#upgrades h2 {
   width: 100%;
}
.upgrade-img{
   break-inside: avoid;
   width: 48%;
   margin-bottom: 10px;
   break-inside: avoid;
   text-align: center;
   font-size: smaller;
   text-decoration: underline;
}
.upgrade-img img{
   height: auto;
   max-width: 50%;
   padding-top: 5%;
   padding-bottom: 0%
}
.upgrade-img a {
   display: block;
}
.img-box {
   height: 85%;
   width: 100%;
   background-color: rgb(161, 26, 26);
}
footer {
   margin: 10px;
   font-size: smaller;
}
/***********larger screens > 768 ****************/
@media only screen and (min-width: 768px) {
   body {
      margin-left: 12%;
      background-image:
         linear-gradient(45deg, #000000 25%, transparent 25%),
         linear-gradient(135deg, #000000 25%, transparent 25%),
         linear-gradient(45deg, transparent 75%, #000000 75%),
         linear-gradient(135deg, transparent 75%, #000000 75%);
      background-size: 100px 100px;
      background-position: 0 0, 50px 0, 50px -50px, 0px 50px;
      justify-content: center;
   }
   #wrapper {
      border: 5px rgb(161, 26, 26) solid;
      border-radius: 1%;
      background-color: white;
      min-height: 90vh;
      min-width: 75vw;
   }
   h1 {
      margin-left: 3%;
   }
   #top-header span,
   #tools {
      display: inline-block;
      margin: 3% 3%;
   }
   nav ul {
      margin: 0 3%;
   }
   #car-div {
      margin-bottom: 15%;
   }
   #car-div img {
      height: auto;
      width: 90%
   }
   #overlap {
      position: absolute;
      max-width: fit-content;
      height: auto;
      background-color: rgba(255, 255, 255, 0.832);
      transform: translate(-15%, -125%);
      color: rgb(161, 26, 26);
      font-size: large;
   }
   #overlap p {
       margin-bottom: 5px;
   }
   .p-color {
      margin-top: 20px;
      width: 80%;
      height: 10%;
   }
   #bottom-container {
      display: flex;
      flex-wrap: wrap;
      justify-content: space-between;
      margin-left: 3%;
   }
   #upgrades {
      order: -1;
      width: 45%;

   }
   #reviews {
      width: 45%;
   }
   #reviews li {
      margin-bottom: 8%;
   }
}
/******* Change Box Model ***************/
*,
*:before,
*:after {
  box-sizing: border-box;
}

